Website, meet world.

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 			<li><a href="club.html">The Club</a></li>
 			<li><a href="game.html">The Game</a></li>
 			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="contact.html">Contact Us</a></li>
+			<li><a href="contact.html">Contact</a></li>
 		</ul>
 		</span>
 	</nav>
 	
 <div id="welcomebox">
-	<div id="pioneers"><h1 id="pioneers" align=center>We are pickleball pioneers.</h1><br><b id="pioneers">MPC is the first pickleball club in the US by college students, for college students.</b></div>
+	<div id="pioneers"><h1 id="pioneers" align=left>We are pickleball pioneers.</h1><br><b id="pioneers">MPC is the first pickleball club in the US by college students, for college students.</b></div>
 </div>
 
 <div id="missionstate">
