--- a/oldcrap.html
+++ b/oldcrap.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Homepage - University of Minnesota Pickleball Club</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="oldstyles.css">
 </head>
 
 <body>
