--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 		<img src="https://pbs.twimg.com/profile_images/1088230545010520064/TJHO1B9D_400x400.jpg" width="100" height="100" align=left>
 		<span>
 		<ul>
-			<li><a href="home.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="club.html">The Club</a></li>
-			<li><a href="game.html">The Game</a></li>
+			<li><a href="game.html">Game Rules</a></li>
 			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="contact.html">Contact</a></li>
+			<li><a href="mailto:pickleball@umn.edu">Contact</a></li>
 		</ul>
 		</span>
 	</nav>
@@ -25,11 +25,11 @@
 </div>
 
 <div id="missionstate">
-	<p align=center><b>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.</b></p>
+	<p align=center><b>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.</b></p><wereglad><p>Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad>
     <br>
-    <p align=center>Pickleball is a combination of tennis and badminton; a new yet familiar game requiring finesse and quick reaction time. It'll take you a few hours to learn, but a few years to master.</p>
+	<h3 align=center><i>During the regular academic year, we meet every Friday from 4-6p in the RecWell North Gym.</i></h3>
 
-	<wereglad><p>Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad>
+	
 
 </div>
 
