Commit for module 2 assignment submission

--- a/game.html
+++ b/game.html
@@ -21,10 +21,8 @@
 	</nav>
 <div id="gamerules">
 
-<br><br><h1 id="rulessummary" style="text-align: center; color: white">The Essential Rules of USAPA Pickleball</h1><br>
-	<img id="rallypicture" src="https://pbs.twimg.com/media/DxzlvDwWwAUngoQ.jpg" width="40%" align=center style="padding-left:30%">
-<br><br>
-
+<br><br><h1 id="rulessummary" style="text-align: center; color: white">Game Rules</h1><br>
+	
 	<h2>Mechanics</h2><br>
 	<p>Like most racquet sports, pickleball is all about using your paddle to keep the ball moving back and forth in a controlled sequence. The ball can only bounce once on each side of the court before being <i>returned</i>, or sent to your opponent's side. Under certain circumstances, you can also <i>volley</i>, hitting the ball before it bounces on your side of the court.</p>
 	
@@ -32,6 +30,9 @@
 	<br>
 	<p>The time from when the ball is <i>served</i> (set in motion) to the time a fault is committed is called a <i>rally</i>. If you fault, either the other team will gain points or you/your team will lose the opportunity to serve.</p><br>
 	
+	<img id="rallypicture" src="https://pbs.twimg.com/media/EEUMJrxWsAI5kRM.jpg:large" width="40%" align=center style="padding-left:30%">
+<br><br>
+		
 	<h2>Serving</h2><br>
 	<p>All serves must be underhand, and from behind the baseline with at least one foot.</p><br>
 
@@ -55,6 +56,9 @@
 	<p>At the beginning of a doubles game, only the right player on the serving team has the opportunity to serve. The starting score is always <i>0-0-2.</i> Some clubs use the unofficial <i>"0-0-start"</i> to denote the unique serving sequence.</p><br>
 	<p>Once the right player faults during this first set of rallies, this is a side-out and the serve goes to the right player on the opposing team.</p><br>
 	
+	<img id="rallypicture" src="https://pbs.twimg.com/media/DxzlvDwWwAUngoQ.jpg" width="40%" align=center style="padding-left:30%">
+<br><br>
+	
 	<h2>The two-bounce rule</h2><br>
 	<p>When the ball is served, the receiving team must let it bounce in their court before returning the serve. After the return, the serving team must then let the ball bounce in their court. Only after the ball has bounced once in each court is it legal to volley. Otherwise, it's a fault.</p><br>
 	
@@ -75,11 +79,10 @@
 	<p>When a pickleball bounces, only a small fraction of its surface area makes contact with the ground. As such, line calls in pickleball must be incredibly precise. If the ball lands on a line or you are otherwise in doubt, it's in.</p><br> <p>The only exception is if the ball hits the kitchen line on the serve. (That's a service fault.)</p><br>
 	
 	<h2>Scoring</h2><br>
-	<p>A typical pickleball game is played to 11 points and won by two points. A score of 10-10, for example, indicates the beginning of overtime. In this case, 12 becomes the new winning score.</p><br>
-	<p><b>Only the serving team can score points.</b> While this can make games a little longer, it also makes for some riveting comebacks and upsets.</p><br>
+	<p>A typical pickleball game is played to 11 points and won by two points. Overtime starts when the score reaches 10-10. It is played by the same rules as normal.</p><br>
+	<p>Important to pickleball is that <b><i>only the serving team can score points.</i></b> While this rule can make games a little longer, it also makes for some riveting comebacks and upsets.</p><br>
 	<p>Scores are announced before each serve. The server's score is announced first, then the receiver's. In doubles, a third number is included in the score representing which teammate is serving; it can be 1 or 2. Refer to "The doubles serving sequence" above for more information.</p><br>
 	<p>To comply with the doubles serving sequence, the very first serve of a doubles game is always scored <i>0-0-2</i>. "2" in this case is the player in the right service court.</p><br>
-	
 	</div>
 	</body>
 </html>
