--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<li><a href="club.html">The Club</a></li>
 			<li><a href="game.html">Game Rules</a></li>
 			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="mailto:pickleball@umn.edu">Contact</a></li>
+			<li><a href="mailto:pickleball@umn.edu">Email Us</a></li>
 		</ul>
 		</span>
 	</nav>
@@ -27,7 +27,7 @@
 <div id="missionstate">
 	<p align=center><b>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.</b></p><wereglad><p>Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad>
     <br>
-	<h3 align=center><i>During the regular academic year, we meet every Friday from 4-6p in the RecWell North Gym.</i></h3>
+	<h2 align=center>During the regular academic year, we meet every Friday from 4-6p in the RecWell North Gym.</h2>
 
 	
 
