DEE layer is complete...for now.

--- a/club.html
+++ b/club.html
@@ -15,7 +15,7 @@
 			<li><a href="club.html">The Club</a></li>
 			<li><a href="game.html">Game Rules</a></li>
 			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="mailto:pickleball@umn.edu">Contact</a></li>
+			<li><a href="connect.html">Connect With Us</a></li>
 		</ul>
 		</span>
 	</nav>
@@ -31,6 +31,8 @@
 	<p><b>Where:</b> Our typical meeting location is the <i>North Gym of the Rec Center.</i> From the entry gates, go up to the second floor, then turn left. Follow the corridor past the ellipticals and proceed through the skyway. Go up one more flight of stairs and turn right into the gym. If you make use of the basement locker room facilities, exit on the North Area side (away from the showers) and take the stairs/elevator to floor 3. The gym will be on the right. We normally play in the back section, opposite of the doors; just follow the sound of the paddles.</p><br>
     
 	<p><b>How much:</b> <i>All club activities are absolutely FREE so long as you are a RecWell member.</i> This includes SSF-paying students and those with faculty and staff memberships.</p><br>
+	
+	<p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d628.6268001735397!2d-93.23018192776523!3d44.97540070696418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32d19ce6a30a9%3A0xe269c6d3df824786!2sUniversity%20Recreation%20and%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1576111303224!5m2!1sen!2sus" width="600" height="450" align="middle" frameborder="0" style="border:0;" allowfullscreen=""></iframe></p><br>
 
 	<img id="rallypicture" src="https://pbs.twimg.com/media/EFAMKKXWwAAHHrj.jpg" width="40%" align=center style="padding-left:30%"><br><br>
 <h2>What to expect</h2><br>
