--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<li><a href="club.html">The Club</a></li>
 			<li><a href="game.html">Game Rules</a></li>
 			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="mailto:pickleball@umn.edu">Email Us</a></li>
+			<li><a href="connect.html">Connect With Us</a></li>
 		</ul>
 		</span>
 	</nav>
