--- a/connect - Copy.html
+++ b/connect - Copy.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-	<nav>
+	<nav class=".hidden-xs">
 		<img src="https://pbs.twimg.com/profile_images/1088230545010520064/TJHO1B9D_400x400.jpg" width="100" height="100" align=left>
 		<span>
 		<ul>
