--- a/index.html
+++ b/index.html
@@ -1,25 +1,142 @@
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Home | Minnesota Pickleball Club</title>
-    <link rel="stylesheet" href="styles.css">
-	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro&display=swap" rel="stylesheet">
+
+<style>
+* {
+  margin: 0;
+  padding: 0%;
+  background-color: transparent;
+  font-family: Source Sans Pro, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: white;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: maroon;
+  text-align: center;
+  font-weight: bold;
+  padding: 12px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  line-height: 100px;
+}
+
+.topnav a:hover {
+  background-color: white;
+  color: gold;
+}
+
+.topnav a.active {
+  background-color: white;
+  color: maroon;
+  line-height: 100px;
+}
+
+.topnav .icon {
+  display: none;
+  line-height: 100px;
+}
+
+@media screen and (max-width: 750px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+
+#welcomebox {
+  background-color: #FFDE7A;
+  padding: 12.5%;
+	color: gold;
+  text-align: left;
+  background-image: url(https://might4right.github.io/minnpickleball/homepagegif.gif);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#missionstate {
+    background-color: goldenrod;
+    background-image: url(C:\Users\rsb\Documents\GitHub\minnpickleball\homebackground.jpg);
+    color: maroon;
+    padding: 2%;
+    text-align: center;
+}
+
+#pioneers {
+	background-color:transparent;
+}
+}
+
+#welcomebox {
+  background-color: #FFDE7A;
+  padding: 12.5%;
+  color: gold;
+  text-align: left;
+  background-image: url(https://might4right.github.io/minnpickleball/homepagegif.gif);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+#missionstate {
+    background-color: goldenrod;
+    background-image: url(C:\Users\rsb\Documents\GitHub\minnpickleball\homebackground.jpg);
+    color: maroon;
+    padding: 1%;
+    text-align: center;
+}
+
+#pioneers {
+	background-color:transparent;
+}
+
+@media screen and (max-width: 750px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+</style>
 </head>
 <body>
-	<nav>
-		<img src="https://pbs.twimg.com/profile_images/1088230545010520064/TJHO1B9D_400x400.jpg" width="100" height="100" align=left>
-		<span>
-		<ul>
-			<li><a href="index.html">Home</a></li>
-			<li><a href="club.html">The Club</a></li>
-			<li><a href="game.html">Game Rules</a></li>
-			<li><a href="news.html">News and Updates</a></li>
-			<li><a href="connect.html">Connect With Us</a></li>
-		</ul>
-		</span>
-	</nav>
-	
+
+<div class="topnav" id="myTopnav">
+	<a href="index.html" class="active"><img src="https://pbs.twimg.com/profile_images/1088230545010520064/TJHO1B9D_400x400.jpg" width="100" height="100" align=left></a>
+	<a href=index.html>Home</a>
+    <a href="club.html">The Club</a>
+    <a href="game.html">The Game</a>
+    <a href="news.html">News and Updates</a>
+    <a href="connect.html">Connect with Us</a>
+    <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
 <div id="welcomebox">
 	<div id="pioneers"><h1 id="pioneers" align=left>We are pickleball pioneers.</h1><br><b id="pioneers">MPC is the first pickleball club in the US by college students, for college students.</b></div>
 </div>
@@ -28,11 +145,6 @@
 	<p align=center><b>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.</b></p><wereglad><p>Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad>
     <br>
 	<h2 align=center>During the regular academic year, we meet every Friday from 4-6p in the RecWell North Gym.</h2>
-
-	
-
 </div>
-
-
 </body>
 </html>
