Game page is now responsive + up to DITA standards

--- a/club.html
+++ b/club.html
@@ -117,7 +117,7 @@ ul li a:hover {
 }
 
 meetings h1,h2,h3,p {
-	margin: 0px 100px 0px 100px;
+	margin: 0px 50px 0px 50px;
 	}
 
 #rulessummary {
@@ -192,27 +192,37 @@ function myFunction() {
 <br><br><h1 id="rulessummary" style="text-align: center; color: white">The Club</h1>
 <br><br>
 
-	<h2>Meeting times and locations</h2>
+	<h2>The basics</h2>
 <br>
     <p><b>When:</b> We hold regular meetings <i>every Friday</i> during the regular academic year, from <i>4 - 6 pm.</i></p><br>
 
-	<p><b>Where:</b> Our typical meeting location is the <i>North Gym of the Rec Center.</i> From the entry gates, go up to the second floor, then turn left. Follow the corridor past the ellipticals and proceed through the skyway. Go up one more flight of stairs and turn right into the gym. If you make use of the basement locker room facilities, exit on the North Area side (away from the showers) and take the stairs/elevator to floor 3. The gym will be on the right. We normally play in the back section, opposite of the doors; just follow the sound of the paddles.</p><br>
+	<p><b>Where:</b> Our typical meeting location is the <i>North Gym of the Rec Center</i> (map below.)</p><br>
 
-	<p><b>How much:</b> <i>All club activities are absolutely FREE so long as you are a RecWell member.</i> This includes SSF-paying students and those with faculty and staff memberships.</p><br>
+  <p><b>How to get to the gym:</b> Enter the Rec Center from Harvard Street. Proceed through the membership gates, go up to the second floor, then turn left. Follow the corridor past the ellipticals and proceed through the skyway. Go up one more flight of stairs and turn right into the gym.</p><br>
+  <p> If you make use of the basement locker room facilities, exit on the North Building side (away from the showers) and take the stairs/elevator to floor 3. The gym will be on the right.</p><br>
+  <p> We normally play in the back half, behind the yellow divider; just follow the sound of the paddles!</p><br>
 
-	<div class="google-maps"><p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d628.6268001735397!2d-93.23018192776523!3d44.97540070696418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32d19ce6a30a9%3A0xe269c6d3df824786!2sUniversity%20Recreation%20and%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1576111303224!5m2!1sen!2sus" width="600" height="450" align="middle" frameborder="0" style="border:0;" allowfullscreen=""></iframe></p></div><br>
+	<p><b>How much:</b> <i>All club activities are absolutely FREE so long as you are a RecWell member.</i> If you pay the Student Services Fee, this is you!</p><br>
+  <p>Faculty, staff, and University retirees may purchase a membership either out of pocket or by payroll deduction. Non-fee paying students, alumni, as well as employees of a University affiliate (including on-campus hospitals and University of MN Physicians) can inquire about purchasing a membership. If you do not fall into any of these categories, the cost for daily admission to the Rec is $12.</p><br>
 
-	<img id="rallypicture" src="https://pbs.twimg.com/media/EFAMKKXWwAAHHrj.jpg" width="40%" align=center style="padding-left:30%"><br><br>
+  <img id="rallypicture" src="https://pbs.twimg.com/media/EFAMKKXWwAAHHrj.jpg" width="40%" align=center style="padding-left:30%"><br><br>
+
 <h2>What to expect</h2><br>
     <p>On an average meeting day, attendance is consistent. Usually we have at least 10 to 12 players, but our current record is 32!</p><br>
 
-	<p>MPC is not a competitive club; instead, we focus on open play. Our experience has shown learning by doing to be the best way to orient new players to the game. The officers and other attendees are always happy to explain the game and offer tips. There's no pressure; simply show up ready to learn. </p><br>
+	<p>MPC is not a competitive club; instead, we focus on open play. Our experience has shown learning by doing to be the best way to orient new players to the game. The officers and other attendees are always happy to explain complicated rules and offer tips. There's no pressure; simply show up ready to learn. </p><br>
 
 	<p>We play both doubles and singles, allowing you to excel on your own and as part of a team. Our three courts allow you to squeeze in as much play time as you desire.</p><br>
 
-    <p>Depending on skill level and attendance, we may lead drills or play rapid-fire games. King of the Court is a club staple, but we may also play rally-score or 2v1 matches.</p><br>
+    <p>Depending on skill level and attendance, we may lead drills or play rapid-fire games. King of the Court is a near-weekly tradition, but we may also play rally-score, 2v1, and league matches.</p><br>
 
-	<p><b><i>While you're welcome to use your own paddle, you don't have to bring anything.</i></b> We provide high-quality composite paddles and indoor balls at no extra charge. If you decide to purchase a paddle, we are happy to recommend a model which will make your natural playing style shine through!</p><br><br>
+	<p><b><i>While you're welcome to use your own paddle, you don't have to bring anything.</i></b> We provide high-quality composite paddles and indoor balls for your use.</p><br>
+
+  <h2>Map</h2><br>
+
+	<div class="google-maps"><p align="center"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d628.6268001735397!2d-93.23018192776523!3d44.97540070696418!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x52b32d19ce6a30a9%3A0xe269c6d3df824786!2sUniversity%20Recreation%20and%20Wellness%20Center!5e0!3m2!1sen!2sus!4v1576111303224!5m2!1sen!2sus" width="600" height="450" align="middle" frameborder="0" style="border:0;" allowfullscreen=""></iframe></p></div><br>
+
+
 	</div>
 
 </body>
