The whole of the website should now be responsive; also 1st news bits up

--- a/club.html
+++ b/club.html
@@ -194,7 +194,7 @@ function myFunction() {
 
 	<h2>The basics</h2>
 <br>
-    <p><b>When:</b> We hold regular meetings <i>every Friday</i> during the regular academic year, from <i>4 - 6 pm.</i></p><br>
+    <p><b>When:</b> We meet <i>every Friday</i> during the regular academic year, from <i>4 - 6 pm.</i></p><br>
 
 	<p><b>Where:</b> Our typical meeting location is the <i>North Gym of the Rec Center</i> (map below.)</p><br>
 
