--- a/game.html
+++ b/game.html
@@ -200,7 +200,7 @@ function myFunction() {
 
 	<p>The time from when the ball is <i>served</i> (set in motion) to the time a fault is committed is called a <i>rally</i>. If you fault, either the other team will gain points or you/your team will lose the opportunity to serve.</p><br>
 
-	<img id="rallypicture" src="https://pbs.twimg.com/media/EEUMJrxWsAI5kRM.jpg:large" style="display: block; margin-left: auto; margin-right: auto" width="70%" align=center>
+	<img id="rallypicture" src="https://pbs.twimg.com/media/EEUMJrxWsAI5kRM.jpg:large" style="display: block; margin-left: auto; margin-right: auto" width="40%" align=center>
 <br><br>
 
 	<h2>Serving</h2><br>
@@ -258,7 +258,7 @@ function myFunction() {
 	<h3>The exception: starting a doubles game</h3><br>
 	<p>At the beginning of a doubles game, only the right-hand player on the starting team has the opportunity to serve. They are Two. If Two faults, it is a side-out. The sequence proceeds as normal, with the other team's One receiving the ball.</p><br>
 
-	<img id="rallypicture" src="https://pbs.twimg.com/media/DxzlvDwWwAUngoQ.jpg" style="display: block; margin-left: auto; margin-right: auto" width="70%" align=center>
+	<img id="rallypicture" src="https://pbs.twimg.com/media/DxzlvDwWwAUngoQ.jpg" style="display: block; margin-left: auto; margin-right: auto" width="40%" align=center>
 <br><br>
 
 	<h2>Faults and scoring</h2><br>
@@ -281,7 +281,7 @@ function myFunction() {
 
   <p><b>A kitchen fault IS NOT committed when:</b></p><br>
 	<ol id="ruleslist"><li>there is no volley. So long as the ball bounces before you hit it, you can stand in the kitchen at <i>any</i> time.</li><br>
-	<li>the ball is over the kitchen at the moment you strike it, AND neither of your feet is in the kitchen. Remember that the kitchen is a 2D rectangle, not a 3D box.</li>
+	<li>the ball is over the kitchen at the moment you strike it, AND neither of your feet are in the kitchen. Remember that the kitchen is a 2D rectangle, not a 3D box.</li>
 	</ol><br>
 
 	<h3>Making line calls</h3><br>
