--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 * {
   margin: 0;
   padding: 0%;
-  background-color: transparent;
+  background-color: goldenrod;
   font-family: Source Sans Pro, sans-serif;
 }
 
@@ -28,6 +28,7 @@
   text-decoration: none;
   font-size: 17px;
   line-height: 100px;
+  background-color: white;
 }
 
 .topnav a:hover {
@@ -122,7 +123,7 @@
     <a href="news.html">News and Updates</a>
     <a href="connect.html">Connect with Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-    <i class="fa fa-bars"></i>
+    <i class="fa fa-bars" style="background-color: white"></i>
   </a>
 </div>
 
@@ -142,8 +143,8 @@ function myFunction() {
 </div>
 
 <div id="missionstate">
-	<p align=center><b>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.</b></p><wereglad><p>Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad>
-    <br>
+	<p align=center>It is our mission to unite diverse communities across the University of Minnesota to learn and enjoy one of America's fastest growing sports.<wereglad> Whether you want to become World #1 or just meet a few new people...<b>we're glad you're here.</b></p></wereglad><br>
+
 	<h2 align=center>During the regular academic year, we meet every Friday from 4-6p in the RecWell North Gym.</h2>
 </div>
 </body>
