Email address fix - whoopsies

--- a/connect.html
+++ b/connect.html
@@ -199,7 +199,7 @@ function myFunction() {
 	<p>Twitter: <a href="https://twitter.com/minnpickleball">minnpickleball</a></p><br>
 
 	<h2>Email us</h2><br>
-	<p>All general inquiries may be directed to our club address: <a href="mailto:pickleball@umn.edu">pickleball@umn.edu</a></p><br>
+	<p>All general inquiries may be directed to our club address: <a href="mailto:pickle@umn.edu">pickle@umn.edu</a></p><br>
 
 	<h2>Get on our mailing list</h2><br>
 	<p>(If no form loads, you can sign up from <a href="https://docs.google.com/forms/d/e/1FAIpQLSdUSqQK2L79oPqYwGvHWSB0Z2r5E5N75R-q443fchSPONqKcQ/viewform">this page</a>.)</p><br>
